<resources>
    <string name="app_name">MixMate2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MixMate App</string>
    <string name="nav_header_subtitle">Navigation menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_settings">Settings</string>


    <string name="settings_darkmode_enabled">Dark</string>
    <string name="settings_darkmode_disabled">Light</string>

    <string name="home_text">Welcome to MixMate</string>

    <string name="home_paragraph">This app is designed to make your music go to the next level.\n\nHere, mix your songs to your own taste in order to improve your listening experience to the max.\n\nPlease consider supporting the app by subscribing to the premium version which lets you use special effects and other special features.\n\nFind a YouTube link for tutorials in settings.</string>

    <string name="tutorial_text"><a href="https://youtu.be/EtH-lQ_AF-k"> YouTube Tutorial</a></string>

    <string name="login_text">Log in</string>
    <string-array name="sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>