<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_player"
                android:icon="@drawable/baseline_settings_applications_24"
                android:title="player"/>

        <item
                android:id="@+id/nav_login"
                android:icon="@drawable/baseline_settings_applications_24"
                android:title="@string/menu_login"/>
        <item
                android:id="@+id/nav_register"
                android:icon="@drawable/baseline_settings_applications_24"
                android:title="@string/menu_register"/>

        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/baseline_settings_applications_24"
                android:title="@string/menu_settings"/>

        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_settings_applications_24"
                android:visible="false"
                android:title="Logout"/>

    </group>
</menu>